# cec

./: .gitignore  CLAUDE.md  Dockerfile  edits.MD  package-lock.json  package.json  pyproject.toml  r2_migration_db_backup.json  start.ps1  tailwind.config.js  translate.sh
.github/workflows/: docker-publish.yml
migrations/versions/: ae8e739d540f_.py  be9d6f1b7f41_.py
src/project/: __init__.py  admin.py  extenstions.py  main.py  models.py
src/project/static/css/: main.css
src/project/static/elements/favicon/: browserconfig.xml  site.webmanifest
src/project/static/scripts/: admin.js  applications.js  calendar.js  editBlog.js  fade.js  idempotency.js  menu.js  toefl.js
src/project/static/src/: input.css
src/project/static/toefl/: toefl.csv
src/project/templates/: about.html  blog.html  blogs.html  course.html  courses.html  index.html  layout.html  login.html  teachers.html  toefl.html  toefl_register.html
src/project/templates/admin/: applications.html  applications_old.html  blogs.html  events.html  feedback.html  index.html  layout.html  member.html  toefl.html
src/project/templates/admin/blog/: create_blog.html
src/project/templates/admin/course/: add_course.html  add_course_group.html  add_timetable.html  courses.html  edit_course.html  edit_course_group.html  edit_timetable.html
src/project/templates/admin/event/: add_event.html  add_event_type.html  edit_event.html  edit_event_type.html
src/project/templates/admin/feedback/: add_feedback.html  edit_feedback.html
src/project/templates/admin/people/: add_staff.html  add_teacher.html  edit_staff.html  edit_teacher.html  people.html
src/project/templates/admin/toefl/: add_toefl.html
src/project/translations/en/LC_MESSAGES/: messages.po
src/project/translations/ky/LC_MESSAGES/: messages.po
src/project/utils/: decor.py  search.py  status_enum.py  storage.py
src/project/views/: application.py  blog.py  course.py  event.py  feedback.py  people.py
