[project]
authors = [{name = "Barnacle322", email = "arstan.usenov@gmail.com"}]
dependencies = [
  "flask>=3.0.2,<4",
  "flask-wtf>=1.2.0,<2",
  "flask-caching>=2.3.0,<3",
  "flask-sqlalchemy>=3.1.1,<4",
  "flask-login>=0.6.3,<0.7",
  "google-cloud-storage>=2.16.0,<3",
  "pillow>=10.3.0,<11",
  "xlsx2csv>=0.8.2,<0.9",
  "requests>=2.31.0,<3",
  "granian[reload]>=1.2.1,<2",
  "flask-debugtoolbar>=0.14.1,<0.15",
  "flask-babel>=4.0.0,<5",
  "babel>=2.14.0,<3",
  "python-slugify>=8.0.4,<9",
  "psycopg>=3.1.19,<4",
  "psycopg-binary>=3.1.19,<4",
  "flask-migrate>=4.0.7,<5",
  "lxml>=5.3.0,<6",
  "boto3>=1.40.69,<2",
]
description = ""
name = "cec"
readme = "README.md"
requires-python = ">=3.12,<4"
version = "0.1.0"

[dependency-groups]
dev = ["ruff>=0.5.0,<0.6", "pre-commit>=3.7.0,<4"]

[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
  ".venv",
  ".old_venv",
  "migrations",
  "instance",
  "typesense-stubs",
]

# Same as Black.
indent-width = 4
line-length = 120

target-version = "py312"

[tool.ruff.lint]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
fixable = ["ALL"]
ignore = ["E501"]
select = ["E", "F", "W", "B", "Q", "I", "N", "UP"]
unfixable = []

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false
